Update support email address in index.html

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <p>Official Developer Site for Iron Slash.</p>
         <hr>
         <h3>Support</h3>
-        <p>For support, please contact: <a href="mailto:YOUR_EMAIL@HERE.com">YOUR_EMAIL@HERE.com</a></p>
+        <p>For support, please contact: <a href="imjunaid.mkhan@gmail.com">YOUR_EMAIL@HERE.com</a></p>
         <hr>
         <h3>Privacy Policy</h3>
         <p>Iron Slash does not collect any personal user data. We use Google AdMob for advertisements, which may use device identifiers to personalize ads.</p>
